# FSM-Lab-Automation

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
ProjectSRC/: logger_config.py
ProjectSRC/DailyExtractor/: Builder.py  DailyExtractorInteractive.py  Director.py  Product.py  Saver.py
ProjectSRC/Logger/: logger_config.py
main/: pyproject.toml
project/: core.py
