[project]
name = "fsm-automation-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jdatetime>=5.2.0",
    "logging>=0.4.9.6",
    "openpyxl>=3.1.5",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

# قسمت مربوط به تعیین کد اجرای برنامه در ترمینال 
[project.scripts]
# قسمت اول نام دستور اجرای برنامه و در ادامه آدرس فایل اصلی و بعد از : نام تابعی که با دستور برنامه اجرا خواهد شد 
FSMApp = "project.core:main"
